crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP018.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP018.py:37:1: UP018 [*] Unnecessary `str` call (rewrite as a literal)
   |
36 | # These become string or byte literals
37 | str()
   | ^^^^^ UP018
38 | str("foo")
39 | str("""
   |
   = help: Replace with empty string

ℹ Fix
34 34 | int().denominator
35 35 | 
36 36 | # These become string or byte literals
37    |-str()
   37 |+""
38 38 | str("foo")
39 39 | str("""
40 40 | foo""")

UP018.py:38:1: UP018 [*] Unnecessary `str` call (rewrite as a literal)
   |
36 | # These become string or byte literals
37 | str()
38 | str("foo")
   | ^^^^^^^^^^ UP018
39 | str("""
40 | foo""")
   |
   = help: Replace with empty string

ℹ Fix
35 35 | 
36 36 | # These become string or byte literals
37 37 | str()
38    |-str("foo")
   38 |+"foo"
39 39 | str("""
40 40 | foo""")
41 41 | bytes()

UP018.py:39:1: UP018 [*] Unnecessary `str` call (rewrite as a literal)
   |
37 |   str()
38 |   str("foo")
39 | / str("""
40 | | foo""")
   | |_______^ UP018
41 |   bytes()
42 |   bytes(b"foo")
   |
   = help: Replace with empty string

ℹ Fix
36 36 | # These become string or byte literals
37 37 | str()
38 38 | str("foo")
39    |-str("""
40    |-foo""")
   39 |+"""
   40 |+foo"""
41 41 | bytes()
42 42 | bytes(b"foo")
43 43 | bytes(b"""

UP018.py:41:1: UP018 [*] Unnecessary `bytes` call (rewrite as a literal)
   |
39 | str("""
40 | foo""")
41 | bytes()
   | ^^^^^^^ UP018
42 | bytes(b"foo")
43 | bytes(b"""
   |
   = help: Replace with empty bytes

ℹ Fix
38 38 | str("foo")
39 39 | str("""
40 40 | foo""")
41    |-bytes()
   41 |+b""
42 42 | bytes(b"foo")
43 43 | bytes(b"""
44 44 | foo""")

UP018.py:42:1: UP018 [*] Unnecessary `bytes` call (rewrite as a literal)
   |
40 | foo""")
41 | bytes()
42 | bytes(b"foo")
   | ^^^^^^^^^^^^^ UP018
43 | bytes(b"""
44 | foo""")
   |
   = help: Replace with empty bytes

ℹ Fix
39 39 | str("""
40 40 | foo""")
41 41 | bytes()
42    |-bytes(b"foo")
   42 |+b"foo"
43 43 | bytes(b"""
44 44 | foo""")
45 45 | f"{str()}"

UP018.py:43:1: UP018 [*] Unnecessary `bytes` call (rewrite as a literal)
   |
41 |   bytes()
42 |   bytes(b"foo")
43 | / bytes(b"""
44 | | foo""")
   | |_______^ UP018
45 |   f"{str()}"
46 |   int()
   |
   = help: Replace with empty bytes

ℹ Fix
40 40 | foo""")
41 41 | bytes()
42 42 | bytes(b"foo")
43    |-bytes(b"""
44    |-foo""")
   43 |+b"""
   44 |+foo"""
45 45 | f"{str()}"
46 46 | int()
47 47 | int(1)

UP018.py:45:4: UP018 [*] Unnecessary `str` call (rewrite as a literal)
   |
43 | bytes(b"""
44 | foo""")
45 | f"{str()}"
   |    ^^^^^ UP018
46 | int()
47 | int(1)
   |
   = help: Replace with empty string

ℹ Fix
42 42 | bytes(b"foo")
43 43 | bytes(b"""
44 44 | foo""")
45    |-f"{str()}"
   45 |+f"{''}"
46 46 | int()
47 47 | int(1)
48 48 | float()

UP018.py:46:1: UP018 [*] Unnecessary `int` call (rewrite as a literal)
   |
44 | foo""")
45 | f"{str()}"
46 | int()
   | ^^^^^ UP018
47 | int(1)
48 | float()
   |
   = help: Replace with 0

ℹ Fix
43 43 | bytes(b"""
44 44 | foo""")
45 45 | f"{str()}"
46    |-int()
   46 |+0
47 47 | int(1)
48 48 | float()
49 49 | float(1.0)

UP018.py:47:1: UP018 [*] Unnecessary `int` call (rewrite as a literal)
   |
45 | f"{str()}"
46 | int()
47 | int(1)
   | ^^^^^^ UP018
48 | float()
49 | float(1.0)
   |
   = help: Replace with 0

ℹ Fix
44 44 | foo""")
45 45 | f"{str()}"
46 46 | int()
47    |-int(1)
   47 |+1
48 48 | float()
49 49 | float(1.0)
50 50 | bool()

UP018.py:48:1: UP018 [*] Unnecessary `float` call (rewrite as a literal)
   |
46 | int()
47 | int(1)
48 | float()
   | ^^^^^^^ UP018
49 | float(1.0)
50 | bool()
   |
   = help: Replace with 0.0

ℹ Fix
45 45 | f"{str()}"
46 46 | int()
47 47 | int(1)
48    |-float()
   48 |+0.0
49 49 | float(1.0)
50 50 | bool()
51 51 | bool(True)

UP018.py:49:1: UP018 [*] Unnecessary `float` call (rewrite as a literal)
   |
47 | int(1)
48 | float()
49 | float(1.0)
   | ^^^^^^^^^^ UP018
50 | bool()
51 | bool(True)
   |
   = help: Replace with 0.0

ℹ Fix
46 46 | int()
47 47 | int(1)
48 48 | float()
49    |-float(1.0)
   49 |+1.0
50 50 | bool()
51 51 | bool(True)
52 52 | bool(False)

UP018.py:50:1: UP018 [*] Unnecessary `bool` call (rewrite as a literal)
   |
48 | float()
49 | float(1.0)
50 | bool()
   | ^^^^^^ UP018
51 | bool(True)
52 | bool(False)
   |
   = help: Replace with `False`

ℹ Fix
47 47 | int(1)
48 48 | float()
49 49 | float(1.0)
50    |-bool()
   50 |+False
51 51 | bool(True)
52 52 | bool(False)
53 53 | 

UP018.py:51:1: UP018 [*] Unnecessary `bool` call (rewrite as a literal)
   |
49 | float(1.0)
50 | bool()
51 | bool(True)
   | ^^^^^^^^^^ UP018
52 | bool(False)
   |
   = help: Replace with `False`

ℹ Fix
48 48 | float()
49 49 | float(1.0)
50 50 | bool()
51    |-bool(True)
   51 |+True
52 52 | bool(False)
53 53 | 
54 54 | # These become a literal but retain parentehsis

UP018.py:52:1: UP018 [*] Unnecessary `bool` call (rewrite as a literal)
   |
50 | bool()
51 | bool(True)
52 | bool(False)
   | ^^^^^^^^^^^ UP018
53 | 
54 | # These become a literal but retain parentehsis
   |
   = help: Replace with `False`

ℹ Fix
49 49 | float(1.0)
50 50 | bool()
51 51 | bool(True)
52    |-bool(False)
   52 |+False
53 53 | 
54 54 | # These become a literal but retain parentehsis
55 55 | int(1).denominator

UP018.py:55:1: UP018 [*] Unnecessary `int` call (rewrite as a literal)
   |
54 | # These become a literal but retain parentehsis
55 | int(1).denominator
   | ^^^^^^ UP018
   |
   = help: Replace with 0

ℹ Fix
52 52 | bool(False)
53 53 | 
54 54 | # These become a literal but retain parentehsis
55    |-int(1).denominator
   55 |+(1).denominator


