crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP019.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: TypingTextStrAlias
    body: "`typing.Text` is deprecated, use `str`"
    suggestion: "Replace with `str`"
    fixable: true
  location:
    row: 7
    column: 21
  end_location:
    row: 7
    column: 25
  fix:
    edits:
      - location:
          row: 7
          column: 21
        end_location:
          row: 7
          column: 25
        content: str
  parent: ~
- kind:
    name: TypingTextStrAlias
    body: "`typing.Text` is deprecated, use `str`"
    suggestion: "Replace with `str`"
    fixable: true
  location:
    row: 11
    column: 28
  end_location:
    row: 11
    column: 39
  fix:
    edits:
      - location:
          row: 11
          column: 28
        end_location:
          row: 11
          column: 39
        content: str
  parent: ~
- kind:
    name: TypingTextStrAlias
    body: "`typing.Text` is deprecated, use `str`"
    suggestion: "Replace with `str`"
    fixable: true
  location:
    row: 15
    column: 27
  end_location:
    row: 15
    column: 37
  fix:
    edits:
      - location:
          row: 15
          column: 27
        end_location:
          row: 15
          column: 37
        content: str
  parent: ~
- kind:
    name: TypingTextStrAlias
    body: "`typing.Text` is deprecated, use `str`"
    suggestion: "Replace with `str`"
    fixable: true
  location:
    row: 19
    column: 28
  end_location:
    row: 19
    column: 35
  fix:
    edits:
      - location:
          row: 19
          column: 28
        end_location:
          row: 19
          column: 35
        content: str
  parent: ~

